[metadata]
name = cassandra_range_repair
summary = python script to repair the primary range of a node in N discrete steps 
description-file = README.md
author = Brian Gallew
author-email = brian.gallew@email
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Software Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages = rangerepair

